eks/istio/vs-argocd.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-route
spec:
  gateways:
    - default/default-gateway
  hosts:
    - 'argo.choshsh.com'
  http:
    - name: argocd
      route:
        - destination:
            host: argocd-server.argocd.svc.cluster.local
            port:
              number: 80
